Turns out Bundler does respect BUNDLE_JOBS
It was buried. Give it a try again.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   # Only use 1 job until Travis fixes the rbx --jobs issue.
   - if [ "$TRAVIS_RUBY_VERSION" == "rbx-2" ] ; then export BUNDLE_JOBS=1 ; fi
   - ruby ci/copy_database_config.rb
-install: bundle install --retry=3 --jobs="$BUNDLE_JOBS"
+install: bundle install --retry=3
 
 before_script:
   - mysql -e 'create database calagator_test;'
