--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ env:
     - DB=sqlite
   global:
     - BUNDLE_JOBS=4
+    - LC_ALL=en_US.UTF-8
+    - LANG=en_US.UTF-8
 matrix:
   allow_failures:
     - rvm: rbx-2
 
 before_install:
-  # Only use 1 job until Travis fixes the rbx --jobs issue.
-  - if [ "$TRAVIS_RUBY_VERSION" == "rbx-2" ] ; then export BUNDLE_JOBS=1 ; fi
   - ruby ci/copy_database_config.rb
 install: bundle install --retry=3
 
