--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ rvm:
   # - jruby-head
 env:
   matrix:
-    - DB=mysql
     - DB=postgresql
-    - DB=sqlite
   global:
     - BUNDLE_JOBS=4
 matrix:
@@ -20,18 +18,17 @@ matrix:
     - rvm: rbx-2
 
 before_install:
-  - echo $LANG
-  - echo $LC_ALL
+  - gem update bundler
+  - bundler --version
   - ruby ci/copy_database_config.rb
-install: bundle install --retry=3
+install: bundle install --retry=3 --jobs=4
 
 before_script:
-  - mysql -e 'create database calagator_test;'
   - psql -c 'create database calagator_test;' -U postgres
   - bundle exec rake db:migrate
   - cp "config/secrets.yml.sample" "config/secrets.yml"
   - bundle exec rake sunspot:solr:start
 script:
   - bundle exec rake spec --trace
-cache: bundler
+#cache: bundler
 
